Translated search placeholder.

--- a/d3/index.html
+++ b/d3/index.html
@@ -51,7 +51,10 @@
     </ul>
     <div id="search-form" class="input-group">
         <input id="search-input" type="text" name="term" class="form-control"
-               placeholder="John ..." autofocus/>
+               placeholder="..."
+               data-i18n="searchPlaceholder"
+               target-i18n="placeholder"
+               autofocus/>
         <span class="input-group-btn">
             <button name="search" value="Search" id="search-button"
                     class="btn btn-default" type="button">
