Layout: changed pills to tabs in sidebar navigation.

--- a/d3/index.html
+++ b/d3/index.html
@@ -6,8 +6,8 @@
 <body>
 
 <div id="search-sidebar" class="left col">
-    <ul id="navigation" class="nav nav-pills">
-    <!--<ul id="navigation" class="nav nav-tabs">-->
+    <!--<ul id="navigation" class="nav nav-pills">-->
+    <ul id="navigation" class="nav nav-tabs">
 
         <li role="presentation" class="active"><a href="#">
             <!--<span class="glyphicon glyphicon-search"></span>-->
