--- a/d3/index.html
+++ b/d3/index.html
@@ -12,19 +12,18 @@
     <ul id="navigation" class="nav nav-tabs">
         <li class="active">
             <!--<span class="glyphicon glyphicon-search"></span>-->
-            <a href="#searchTab" role="tab" data-toggle="tab"
+            <a href="#searchTab" data-toggle="tab"
                data-i18n="searchTab"></a></li>
         <li>
             <!--<span class="glyphicon glyphicon-info-sign"></span>-->
-            <a href="#infoTab" role="tab" data-toggle="tab"
+            <a href="#infoTab" data-toggle="tab"
                data-i18n="infoTab"></a></li>
         <li>
             <!--<span class="glyphicon glyphicon-info-sign"></span>-->
-            <a href="#helpTab" role="tab" data-toggle="tab"
+            <a href="#helpTab" data-toggle="tab"
                data-i18n="helpTab"></a></li>
         <li class="dropdown pull-right">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#"
-               role="button" href="#">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <!--<span class="glyphicon glyphicon-question-sign"></span>-->
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
                 <!--<span class="glyphicon glyphicon-option-horizontal"></span>-->
@@ -42,7 +41,7 @@
                     <span class="glyphicon glyphicon-remove"></span>
                     <span data-i18n='clearGraph'></span>
                 </a></li>
-                <li role="separator" class="divider"></li>
+                <li class="divider"></li>
                 <li><a id="about" href="#" data-toggle="modal"
                        data-target="#aboutModal">
                     <span class="glyphicon glyphicon-info-sign"></span>
@@ -58,7 +57,7 @@
 
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="searchTab">
+        <div class="tab-pane fade in active" id="searchTab">
             <div id="search-form" class="input-group">
                 <input id="search-input" type="text" name="term" class="form-control"
                        placeholder="..."
@@ -77,8 +76,8 @@
             <div id="search-results"></div>
             <div id="search-follow"></div>
         </div>
-        <div role="tabpanel" class="tab-pane" id="infoTab">info</div>
-        <div role="tabpanel" class="tab-pane" id="helpTab">help</div>
+        <div class="tab-pane fade" id="infoTab">info</div>
+        <div class="tab-pane fade" id="helpTab">help</div>
     </div>
 </div>
 <div class="right layout-col">
@@ -93,8 +92,8 @@
 
 
 <!-- Share Graph Modal -->
-<div class="modal fade" id="shareGraphModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="shareGraphModal" tabindex="-1">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"
@@ -123,8 +122,8 @@
 </div>
 
 <!-- Clear Graph Modal -->
-<div class="modal fade" id="clearGraphModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-sm" role="document">
+<div class="modal fade" id="clearGraphModal" tabindex="-1">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">
@@ -145,8 +144,8 @@
 </div>
 
 <!-- About Modal -->
-<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="aboutModal" tabindex="-1">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"
