Rectengular nodes & info tab stub.

--- a/d3/index.html
+++ b/d3/index.html
@@ -73,10 +73,64 @@
 
             </div>
 
-            <div id="search-results"></div>
+            <div id="search-results" class="node-list"></div>
             <div id="search-follow"></div>
         </div>
-        <div class="tab-pane fade" id="infoTab">info</div>
+        <div class="tab-pane fade" id="infoTab">
+            <h4>
+                Optical Nonreciprocity in Asymmetric Optomechanical Couplers
+            </h4>
+
+            <h5 data-i18n="abstract"></h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est. Etiam sit amet lectus quis est congue mollis. Phasellus congue lacus eget neque. Phasellus ornare, ante vitae consectetuer consequat, purus sapien ultricies dolor, et mollis pede metus eget nisi. Praesent sodales velit quis augue. Cras suscipit, urna at aliquam rhoncus, urna quam viverra nisi, in interdum massa nibh nec erat.</p>
+
+            <h5 data-i18n="publishedIn"></h5>
+            <div class="node-list">
+                <div draggable="true" class="search-result journal">
+                    <div draggable="true">
+                        <div class="title"><span
+                                class="glyphicon glyphicon-arrow-right pull-right"></span>Scientific Reports
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <h5 data-i18n="authors"></h5>
+            <div class="node-list">
+                <div draggable="true" class="search-result author">
+                    <div draggable="true">
+                        <div class="title"><span
+                                class="glyphicon glyphicon-arrow-right pull-right"></span>John
+                            J. Welch
+                        </div>
+                    </div>
+                </div>
+                <div draggable="true" class="search-result author">
+                    <div draggable="true">
+                        <div class="title"><span
+                                class="glyphicon glyphicon-arrow-right pull-right"></span>Michael
+                            John Wingfield
+                        </div>
+                    </div>
+                </div>
+                <div draggable="true" class="search-result author">
+                    <div draggable="true">
+                        <div class="title"><span
+                                class="glyphicon glyphicon-arrow-right pull-right"></span>W.
+                            Johns
+                        </div>
+                    </div>
+                </div>
+                <div draggable="true" class="search-result author">
+                    <div draggable="true">
+                        <div class="title"><span
+                                class="glyphicon glyphicon-arrow-right pull-right"></span>J.
+                            St. John
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="tab-pane fade" id="helpTab">help</div>
     </div>
 </div>
