Added content to the help tab (TODO translate into polish).

--- a/d3/index.html
+++ b/d3/index.html
@@ -131,7 +131,27 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="helpTab">help</div>
+        <div class="tab-pane fade" id="helpTab">
+            <h5>Brosing graph</h5>
+            <p>
+                <em>Double click on a node</em> to expand it, i.e.
+                to add all of its neighobours
+            </p>
+            <p>
+                <em>Single click on a node</em> to view additional
+                informations about a node.
+            </p>
+            <h5>Node types:</h5>
+            <div class="node-list">
+                <div class="search-result journal">Journal</div>
+                <div class="search-result dataset">Dataset</div>
+                <div class="search-result project">Project</div>
+                <div class="search-result paper">Paper</div>
+                <div class="search-result institution">Institution</div>
+                <div class="search-result author">Author</div>
+                <div class="search-result blog">Blog</div>
+            </div>
+        </div>
     </div>
 </div>
 <div class="right layout-col">
