Added missing period.

--- a/d3/index.html
+++ b/d3/index.html
@@ -135,7 +135,7 @@
             <h5>Brosing graph</h5>
             <p>
                 <em>Double click on a node</em> to expand it, i.e.
-                to add all of its neighobours
+                to add all of its neighobours.
             </p>
             <p>
                 <em>Single click on a node</em> to view additional
