--- a/d3/index.html
+++ b/d3/index.html
@@ -132,7 +132,7 @@
             </div>
         </div>
         <div class="tab-pane fade" id="helpTab">
-            <h5>Brosing graph</h5>
+            <h5>Browsing graph</h5>
             <p>
                 <em>Double click on a node</em> to expand it, i.e.
                 to add all of its neighobours.
